--- a/public/main.html
+++ b/public/main.html
@@ -178,23 +178,136 @@ Like the light that illuminates by hiding from itself, the walls become present 
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>avalos</h3>
-      <p>lorem ipsum dolor</p>
+      <h3>Estados de la Arquitectura</h3>
+      <p>Seis Alegorías Arquitectónicas</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/01" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/02" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/03" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/04" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/05" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/06" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/07" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/08" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/09" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/10" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/11" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/12" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/13" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/14" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/15" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/16" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/17" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/18" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/19" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/20" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/21" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/22" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/23" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/24" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/25" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/26" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/27" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/28" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/29" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/30" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/31" alt="Image 1">
+      <img src="public/assets/img/12_estados de la arquitectura/32" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
+      <p>Dibujos, montajes, textos: Manuel Mensa, Lucas Torres Agüero, Matías Etchart</p>
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>geometrías invisibles</h3>
-      <p>lorem ipsum dolor</p>
+      <h3>hoy el mundo</h3>
+      <p>De la A la Zeta.</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ratione, voluptate minima rem explicabo harum soluta. Quos perspiciatis dolores similique, placeat doloremque adipisci illo amet repudiandae vero perferendis eos ipsum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur voluptates ducimus deleniti quaerat laborum molestias alias quisquam earum? Consequatur id optio nesciunt minima harum delectus adipisci aspernatur eius suscipit repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem in at expedita ullam similique, voluptatem harum sequi soluta eaque vero ducimus. Numquam, alias! Pariatur tenetur nisi veniam fuga illum sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maiores rerum eius tenetur recusandae? Voluptates dolor unde culpa officia quisquam perferendis illum dicta fuga doloribus sequi! Amet ex praesentium nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt officia voluptatem quis eum optio nemo amet sit iure ipsam in repellat corrupti reiciendis sapiente, blanditiis magnam autem labore ut ab. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non tenetur accusantium ducimus quod tempore, rerum voluptas, officiis veniam vel libero velit id deleniti rem, quibusdam ex soluta? Laborum, voluptatibus libero!</p>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
-      <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio ratione, voluptate minima rem explicabo harum soluta. Quos perspiciatis dolores similique, placeat doloremque adipisci illo amet repudiandae vero perferendis eos ipsum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur voluptates ducimus deleniti quaerat laborum molestias alias quisquam earum? Consequatur id optio nesciunt minima harum delectus adipisci aspernatur eius suscipit repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem in at expedita ullam similique, voluptatem harum sequi soluta eaque vero ducimus. Numquam, alias! Pariatur tenetur nisi veniam fuga illum sint. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse maiores rerum eius tenetur recusandae? Voluptates dolor unde culpa officia quisquam perferendis illum dicta fuga doloribus sequi! Amet ex praesentium nihil.</p>
-      <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
-      <!-- Add more content here if needed -->
+      <p>A: Hoy el mundo es economía. La arquitectura debe utilizar sus herramientas disciplinares para facilitar la administración eficiente de los recursos utilizados en la construcción de edificios. 
+B: Hoy el mundo carece de una ética. La arquitectura debe recuperar los proyectos del movimiento moderno de ayer y utilizar las herramientas tecnológicas de hoy para inventar un mundo. 
+C: Hoy el mundo es un lugar horrible y peligroso. La arquitectura resiste al producir belleza y seguridad para sus usuarios. 
+D: Hoy el mundo está regido por un pragmatismo extremo. Crear espacios que se alejen de la función, que cumplan con ella pero la superen y le impongan cierta distancia, es una forma de resistencia. 
+E: Hoy el mundo está inmerso en una intensa fragmentación donde todo pareciera abandonado al infinito del sinsentido. Con- centrarse en el interior de la disciplina arquitectónica para unir y dar sentido es una forma de resistencia. 
+F: Hoy el mundo solo entiende de dinero. La acumulación insaciable de capital que supone un sistema supercapitalista provoca que se confunda buena arquitectura con arquitectura de lujo. La arquitectura debe encontrar formas de construcción económicas a la vez que de alta calidad estética para resistir a las mensuras impuestas por el dinero. 
+G: El mundo hoy carece de belleza. Las vanguardias históricas disolvieron este concepto, concentrándose en la manifestación de la cesura entre significado y significante. La arquitectura puede resistir al dedicarse a la belleza de las organizaciones materiales. 
+H: El mundo sigue insistiendo con encajonamientos hiperdeterministas que no hacen otra cosa que machacar y aplacar cualquier intento de subjetividad posible. La arquitectura es un modo de ver el mundo y el arquitecto resiste al manifestar su singularidad. 
+I: Hoy decir mundo es decir mercado. La arquitectura puede resistir a estos cálculos ingresando variables propias en ecuaciones ajenas. 
+J: El mundo no tiene archivo y sin archivo es imposible la memoria. La arquitectura resiste operando como un gigantesco apa- rato de registro que habilita a la justicia y a la verdad. 
+K: Hoy el mundo es impensable como una totalidad. La arquitectura implementa pequeñas modificaciones que repercuten a gran escala. 
+L: Hoy el mundo fluye sin parar y la arquitectura debe dejar de resistir y lograr modernizarse. Ganar la eficiencia de otras industrias, la automotriz por ejemplo, es el próximo paso. 
+M: Hoy ya no existe más el mundo. La arquitectura tiene que encontrar modos para recrearse y no languidecer. 
+N: Hoy: el mundo. La arquitectura provee un servicio profesional y la resistencia tiene que ver con la guerra y no con la paz. En el futuro hay solo organizaciones corporativas. 
+O: Hoy el mundo entiende que todo es política. La arquitectura como disciplina técnica encuentra su política determinada por las condiciones de sus encargos y para resistir debe ponerse al servicio de procesos inteligentes. 
+P: Hoy el mundo es igual que ayer. La arquitectura como herramienta de consenso está condenada a conservar la hegemonía de los poderes dominantes. Cualquier confrontación provocada por la arquitectura abandona la disciplina sin posibilidad de retorno. 
+Q: ¿Hoy el mundo? La arquitectura es un servicio como lo pue- de ser la medicina y la teoría es un negocio impulsado por un montón de gente que equivocó su profesión. 
+R: Hoy el mundo es algo que como arquitectos no podemos pensar. La arquitectura es una disciplina que se centra en problemas arquitectónicos a saber: puertas, ventanas, muros, columnas, perímetros, estructura, programa, función, accesos, alturas, etc. 
+S: Hoy hay muchos mundos. La arquitectura puede negociar con actores, recursos y saberes heterogéneos para dar un marco para ensamblar nuevas organizaciones sociales. 
+T: Hoy el mundo es transformado por múltiples fuerzas que incesantes actúan en simultaneo. La arquitectura puede esbozar representaciones del mundo dentro de los límites que las herramientas técnicas y conceptuales de la disciplina ofrecen debiendo 
+inhibir y borrar de su discurso la tentación de pronunciar algún tipo de acción programática. 
+U: Hoy el mundo profundizó su complejidad. La arquitectura debe utilizar las nuevas herramientas tecnológicas para poder interpretar, referenciar, analizar, indexar y sistematizar la dispersión de estos nuevos acontecimientos y desplegar su información latente. 
+V: Hoy el mundo está globalizado. Los arquitectos deben pensar una arquitectura con capacidades ubicuas que den respuestas globales a problemas locales. 
+W:Hoy la población del mundo vive en las ciudades. Toda arquitectura debe lidiar con esta condición. 
+X: Hoy el mundo es lo que se pueda hacer con él hoy. La arquitectura puede resistir la postergación crónica de sus proyectos si los arquitectos utilizan sus manos para construir. 
+Y: Hoy el mundo es su cultura. La arquitectura produce representaciones culturales del presente. 
+Z: Hoy el mundo se dirige a un colapso ambiental. La arquitectura como disciplina en la que se delega la construcción de nuestro hábitat puede proveer soluciones eficientes y sustentables para lograr revertir la catástrofe que se nos avecina.
+</p>
+       <br>
+      <p>resources used for erecting buildings.
+
+B: Today the world lacks ethics. Architecture should reclaim the modernist movement projects of yesterday and utilize the technological tools of today to invent a brand new world.
+
+C: Today the world is a horrible and dangerous place. Architecture resists by producing beauty and security for its users.
+
+D: Today the world is governed by an extreme pragmatism. Creating spaces that move away from function, that abide it but that also impose a certain distance, is a form of resistance. 
+
+E: Today the world is immersed in an intense fragmentation where all seems abandoned to the infinity of nonsense. Concentrating on the internal aspects of the architectural discipline to reunite and give meaning is a form of resistance.
+
+F: Today the world only understands money. The insatiable accumulation of capital, which entails a super-capitalist system, causes good architecture to be confused with luxury architecture. Architecture should find economic ways of building as well as a high-quality aesthetic to resist the measures imposed by money. 
+
+G: The world today lacks beauty. The early avant-garde dissolved this concept, concentrating on the manifestation of the gap between signified and signifier. Architecture can resist by dedicating itself to the beauty of the organization of materials. 
+
+H: The world continues to insist on hyper-deterministic boxes that do nothing but crush and placate any possible attempt at subjectivity. Architecture is a way of seeing the world and the architect resists by manifesting its singularity.
+
+I: Today to say world is to say market. Architecture can resist these calculations by entering its own variables into foreign equations.
+
+J: The world does not have an archive, and without one, memory is impossible. Architecture resists operating as a gigantic record apparatus that enables justice and truth 
+
+K: Today the world is unthinkable as a totality. Architecture implements small modifications that reverberate on larger scales.
+
+L: Today the world flows endlessly and architecture should stop resisting and modernize itself. Gaining the efficiency of other industries, for example the automotive one, is the next step.
+
+M: Today the world no longer exists. Architecture has to find ways of reinventing itself in order to not languish. 
+
+N: Today: the world. Architecture provides a professional service and resistance has to do with war and not peace. In the future, there are only corporate organisations. 
+
+O: Today the word understands that all is political. Architecture as a technical discipline finds its politics determined by the conditions of its assignments and, to resist, it should be at the service of intelligent processes. 
+
+P: Today the world is the same as yesterday. Architecture as a consensus tool is condemned to preserve the hegemony of the dominant powers. Any provoked confrontation in architecture abandons the discipline without a possibility of return. 
+
+Q: Today…the world? Architecture is a service, like medicine can be, and theory is a business driven by a lot of people who got their professions wrong.
+
+R: Today the world is something that, as architects, we cannot think. Architecture is a discipline that focuses on architectural problems, namely: doors, windows, walls, columns, perimeters, structures, programs, functions, accesses, heights, etc.
+
+S: Today there are many worlds. Architecture can negotiate with heterogeneous actors, resources and expertise to give a framework for assembling new social organisations. 
+
+T: Today the world is transformed by multiple forces that incessantly act in simultaneity. Architecture can sketch representations of the world within the limits that the technical and conceptual tools of the discipline offer, having to inhibit and erase from its discourse the temptation to pronounce some type of programmatic action. 
+
+U: Today the world deepened its complexity. Architecture should use new technological tools to be able to interpret, analyse, index and systematise the dispersion of these new events and to deploy its latent information. 
+
+V: Today the world is globalised. Architects should think of an architecture with ubiquitous capacities that globally respond to local problems.
+
+W: Today the world population lives in cities. All architecture should deal with this condition.
+
+X: Today the world is what you can do with it today. Architecture can resist the chronic postponement of its projects if architects use their hands to build.
+
+Y: Today the world is its culture. Architecture produces cultural representations of the present. 
+
+Z: Today the world is heading for environmental collapse. Architecture as a discipline in which the construction of our habitat is delegated can provide efficient and sustainable solutions to reverse the catastrophe that is approaching. 
+
+</p>
+        <br>
+      <p>Texto: Manuel Mensa
+        Publicado en Circular 02: Arquitectura, Arquitectura, Arquitectura (Milena Caserola, 2015)</p>
+      
+     
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>estados de la arquitectura</h3>
