--- a/public/main.html
+++ b/public/main.html
@@ -362,10 +362,14 @@ No se trata de la "mejor arquitectura", de la arquitectura más virtuosa, ya que
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
-      <h3>mothershiptheatre</h3>
-      <p>lorem ipsum dolor</p>
+      <h3>never even</h3>
+      <p>(respeto por las cosas como son)</p>
       <br>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/White_square_50%25_transparency.svg/1024px-White_square_50%25_transparency.svg.png" alt="Image 1">
+      <img src="public/assets/img/20_never even/01.jpg" alt="Image 1">
+      <img src="public/assets/img/20_never even/02.jpg" alt="Image 1">
+      <p>Proyecto: Manuel Mensa
+Publicado en Symmetry: The One and the Many (David Salomon, Archivos de Arquitectura, 2018. EAEU UTDT)
+      </p>
       <!-- Add more content here if needed -->
     </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
