--- a/public/main.html
+++ b/public/main.html
@@ -118,12 +118,12 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <h3>casa freesbee x sg</h3>
       <p></p>
       <br>
-      <img src="public/assets/img/07_casa freesbee x sg/01.jpg" alt="Image 1">
-     <img src="public/assets/img/07_casa freesbee x sg/02.jpg" alt="Image 1">
-      <img src="public/assets/img/07_casa freesbee x sg/03.jpg" alt="Image 1">
-      <img src="public/assets/img/07_casa freesbee x sg/04.jpg" alt="Image 1">
-      <img src="public/assets/img/07_casa freesbee x sg/05.jpg" alt="Image 1">
-      <img src="public/assets/img/07_casa freesbee x sg/06.jpg" alt="Image 1">
+      <img src="assets/img/07_casa freesbee x sg/01.jpg" alt="Image 1">
+     <img src="assets/img/07_casa freesbee x sg/02.jpg" alt="Image 1">
+      <img src="assets/img/07_casa freesbee x sg/03.jpg" alt="Image 1">
+      <img src="assets/img/07_casa freesbee x sg/04.jpg" alt="Image 1">
+      <img src="assets/img/07_casa freesbee x sg/05.jpg" alt="Image 1">
+      <img src="assets/img/07_casa freesbee x sg/06.jpg" alt="Image 1">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
     </div>
