--- a/public/main.html
+++ b/public/main.html
@@ -55,15 +55,15 @@ el momento exacto en el que se derrumba el complejo de viviendas Pruitt Igoe, mu
 Toda normatividad posible surge desde la experiencia y los materiales arquitectónicos funcionan como normas que regulan y restringen el desplazamiento de los cuerpos. La arquitectura separa una cosa de otra, ofreciendo bloqueos físicos a los flujos que intentan atravesarlos. Estas restricciones comprenden, en su conjunto, sistemas de ordenamiento territorial que, desplegados en fronteras, legislan y contienen el solapamiento de las jurisdicciones que materializan. Los elementos arquitectónicos constituyen normativas que, en su combinatoria, establecen regímenes que regulan las posibilidades de movimientos, interacciones, posiciones y desplazamientos de los cuerpos: un muro es lo que no permite ser atravesado, bloqueando el desplazamiento horizontal, un vano es una porción de muro ausente que regula los atravesamientos según sus dimensiones, una puerta es un dispositivo binario que abierto es un vano y cerrado es un muro. 
 Si las propuestas de arquitectura moderna no lograron la creación de un Estado que las ponga en funcionamiento, el aprendizaje, en vez de desechar todo el proyecto y esperar a que las condiciones cambien, es proyectar solo con aquello que la arquitectura tiene la capacidad de poner en movimiento.  
 </p>
-      <img src="/assets/img/01_arquitectura sin estado/01.jpg" alt="Image 1">
-      <img src="/assets/img/01_arquitectura sin estado/02.JPG" alt="Image 2">
-      <img src="/assets/img/01_arquitectura sin estado/03.jpg" alt="Image 3">
-      <img src="/assets/img/01_arquitectura sin estado/04.JPG" alt="Image 4">
-      <img src="/assets/img/01_arquitectura sin estado/05.jpg" alt="Image 5">
-      <img src="/assets/img/01_arquitectura sin estado/06.JPG" alt="Image 6">
-      <img src="/assets/img/01_arquitectura sin estado/07.jpg" alt="Image 7">
-      <img src="/assets/img/01_arquitectura sin estado/08.jpg" alt="Image 8">
-      <img src="/assets/img/01_arquitectura sin estado/09.jpg" alt="Image 9">
+      <img src="/assets/img/01_arquitectura_sin_estado/01.jpg" alt="Image 1">
+      <img src="/assets/img/01_arquitectura_sin_estado/02.JPG" alt="Image 2">
+      <img src="/assets/img/01_arquitectura_sin_estado/03.jpg" alt="Image 3">
+      <img src="/assets/img/01_arquitectura_sin_estado/04.JPG" alt="Image 4">
+      <img src="/assets/img/01_arquitectura_sin_estado/05.jpg" alt="Image 5">
+      <img src="/assets/img/01_arquitectura_sin_estado/06.JPG" alt="Image 6">
+      <img src="/assets/img/01_arquitectura_sin_estado/07.jpg" alt="Image 7">
+      <img src="/assets/img/01_arquitectura_sin_estado/08.jpg" alt="Image 8">
+      <img src="/assets/img/01_arquitectura_sin_estado/09.jpg" alt="Image 9">
       <img src="/assets/img/01_arquitectura sin estado/10.jpg" alt="Image 10">
       <img src="/assets/img/01_arquitectura sin estado/11.jpg" alt="Image 11">
       <img src="/assets/img/01_arquitectura sin estado/12.jpg" alt="Image 12">
