--- a/public/main.html
+++ b/public/main.html
@@ -64,15 +64,15 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
       <img src="/assets/img/01_arquitectura_sin_estado/07.jpg" alt="Image 7">
       <img src="/assets/img/01_arquitectura_sin_estado/08.jpg" alt="Image 8">
       <img src="/assets/img/01_arquitectura_sin_estado/09.jpg" alt="Image 9">
-      <img src="/assets/img/01_arquitectura sin estado/10.jpg" alt="Image 10">
-      <img src="/assets/img/01_arquitectura sin estado/11.jpg" alt="Image 11">
-      <img src="/assets/img/01_arquitectura sin estado/12.jpg" alt="Image 12">
-      <img src="/assets/img/01_arquitectura sin estado/13.jpg" alt="Image 13">
-      <img src="/assets/img/01_arquitectura sin estado/14.jpg" alt="Image 14">
-      <img src="/assets/img/01_arquitectura sin estado/15.jpg" alt="Image 15">
-      <img src="/assets/img/01_arquitectura sin estado/16.jpg" alt="Image 16">
-      <img src="/assets/img/01_arquitectura sin estado/17.jpg" alt="Image 17">
-      <img src="/assets/img/01_arquitectura sin estado/18.jpg" alt="Image 18">
+      <img src="/assets/img/01_arquitectura_sin_estado/10.jpg" alt="Image 10">
+      <img src="/assets/img/01_arquitectura_sin_estado/11.jpg" alt="Image 11">
+      <img src="/assets/img/01_arquitectura_sin_estado/12.jpg" alt="Image 12">
+      <img src="/assets/img/01_arquitectura_sin_estado/13.jpg" alt="Image 13">
+      <img src="/assets/img/01_arquitectura_sin_estado/14.jpg" alt="Image 14">
+      <img src="/assets/img/01_arquitectura_sin_estado/15.jpg" alt="Image 15">
+      <img src="/assets/img/01_arquitectura_sin_estado/16.jpg" alt="Image 16">
+      <img src="/assets/img/01_arquitectura_sin_estado/17.jpg" alt="Image 17">
+      <img src="/assets/img/01_arquitectura_sin_estado/18.jpg" alt="Image 18">
       <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum, felis sit amet sollicitudin rutrum, est quam lobortis mi, ut facilisis ex diam sit amet massa.</p>
       <!-- Add more content here if needed -->
   </div>
@@ -116,6 +116,7 @@ Si las propuestas de arquitectura moderna no lograron la creación de un Estado
   </div>
     <div class="column" ontouchstart="handleTouchStart(this, event)" ontouchmove="handleTouchMove(this, event)">
       <h3>casa freesbee x sg</h3>
+      <p>lorem ipsum dolor</p>
       <p></p>
       <br>
       <img src="assets/img/07_casa freesbee x sg/01.jpg" alt="Image 1">
